--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,97 @@
-h1 {
-    color: red;
+* {
+    margin: 0;
+    
+    box-sizing: border-box;
+}
+
+
+
+
+nav > div{
+    display: flex;
+    align-items: center;
+    
+
+    padding: 1rem 0;
+    gap: 1rem;
+    
+    
+    
+    font-size: 1.2rem;
+    z-index: 3;
+    width: 60%;
+
+    
+    margin: 0 auto;
+}
+nav {
+    position: fixed;
+    
+    width: 100%;
+    top: 0;
+}
+
+.search-icon {
+    background: url('./search.svg');
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+}
+button {
+    cursor: pointer;
+    margin-left: auto;
+    font-size: 1.5rem;
+    border-radius: 25px;
+    padding: .5rem 2rem;
+}
+
+input {
+    border-radius: 15px;
+    outline: none;
+    font-size: 2rem;
+    padding-left: 1ch;
+}
+
+.content-container {
+    
+    display: flex;
+    flex-direction: column;
+    
+    gap: 2rem;
+    padding-top: 5rem;
+    
+    
+    
+}
+
+
+.current-content {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    padding: 4rem 5rem;
+    max-width: 60%;
+    margin: 0 auto;
+}
+
+.current-icon-desc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-title {
+    font-size: 2rem;
+    max-width: 60%;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+}
+
+.content-cards-container {
+    border: 1px solid black;
+    max-width: 60%;
+    margin: 0 auto;
+    padding: 4rem 5rem;
+    border-radius: 15px;
+    
 }
