Add API fetch to main card to display entered val
User can now enter a value into the search bar. main card will populate current weather of city and icon by either clicking on search icon or pressing enter.
Button to change degree unit works on main card as well.

--- a/src/styles.css
+++ b/src/styles.css
@@ -102,7 +102,7 @@ input {
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    background-color: rgba(53, 53, 53, 0.4);
+    background-color: rgba(44, 44, 44, 0.4);
     padding: 1rem;
     border-radius: 15px;
 }
@@ -114,9 +114,18 @@ input {
     font-size: 6rem;
     font-weight: 700;
 }
+.date {
+    font-size: 1.3rem;
+}
+.current-icon {
+    
+    height: 10rem;
+    border: none;
+    width: 10rem;
+}
 
 .current-icon-desc {
-    background-color: rgba(53, 53, 53, 0.4);
+    background-color: rgba(44, 44, 44, 0.4);
     padding: 1rem;
     border-radius: 15px;
     display: flex;
