--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ input {
 }
 
 .content-container {
-    
+    z-index: 0;
     display: flex;
     flex-direction: column;
     
@@ -174,6 +174,10 @@ input {
     
     
 }
+.daily-forecast-container {
+    display: flex;
+    flex-direction: column;
+}
 .last-container {
     margin-bottom: 3rem;
 }
@@ -201,3 +205,42 @@ input {
     background-image: url('./wind.svg');
     
 }
+
+.loader, .loader2, .loader3 {
+    display: none;
+    position: absolute;
+    text-align: center;
+    z-index: 1;
+    left: 47%;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #555; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.loader2 {
+    margin-top: 11%;
+}
+
+.loader3{
+    margin-top: 10%;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+
+
+ 
